--- a/src/app/restaurent/pages/dish-items/modal/modal.component.html
+++ b/src/app/restaurent/pages/dish-items/modal/modal.component.html
@@ -7,7 +7,7 @@
             Customize "{{itemName?itemName.Name:''}}"
           </h5>
         </div>
-        <div class="col-md-4 units-pos">
+        <div class="col-md-4 units-pos pr-5">
           <figure class="m-0 setunit" fxLayout="row" fxLayoutAlign="space-around center">
             <a href="javascript:void(0);" class="unit decrement" (click)="updateQuantity(false)">
               <div class="minicon"></div>
