--- a/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
+++ b/src/app/restaurent/pages/us-restaurants/us-restaurants.component.html
@@ -41,7 +41,7 @@
 
           </head>
           <body>
-          <div id="floating-panel">
+          <div style="display: none" id="floating-panel">
               <input id="latlng" type="text" value="41.8781,-87.6298" />
               <input id="submitt" type="button" value="Reverse Geocode" />
           </div>
