--- a/src/app/restaurent/base-layout/header/header.component.html
+++ b/src/app/restaurent/base-layout/header/header.component.html
@@ -5,7 +5,7 @@
         <div class="left">
           <div fxLayout="row" fxLayoutAlign="space-between center">
             <span fxLayout fxLayoutAlign="start center" fxLayoutGap="10px">
-              <nb-icon icon="arrow-back-outline" fxHide.lg="" (click)="history.back()"></nb-icon>
+              <nb-icon *ngIf="history.length > 1" icon="arrow-back-outline" fxHide.lg="" (click)="history.back()"></nb-icon>
               <a class="navbar-brand " href="{{host}}">
                 <img *ngIf="country == 'au'" src="assets/img/logoAU.png" height="28px" alt="Logo" class="brand-logo" width="122px">
                 <img *ngIf="country == 'us'"  src="assets/images/logo.png" alt="Logo" class="brand-logo"  width="122px">
