--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -7,7 +7,7 @@
         <div class="row">
           <div class="col-sm-12" fxLayout fxLayoutAlign="start start" fxLayoutGap="15px">
             <div class="">
-              <nb-icon icon="arrow-back-outline" fxHide.lg="" class="web-back" (click)="history.back()"></nb-icon>
+              <nb-icon  *ngIf="history.length > 1" icon="arrow-back-outline" fxHide.lg="" class="web-back" (click)="history.back()"></nb-icon>
             </div>
             <div class="main-view" fxFlex="65" fxLayout.md="65">
 
