changes done by sanjay

--- a/src/app/restaurent/pages/register/register.component.html
+++ b/src/app/restaurent/pages/register/register.component.html
@@ -9,7 +9,7 @@
       <div class="modal-body">
         <div class="modal-inner">
           <!-- Form -->
-          <form *ngIf="!flags.isOtpSent" #userRegisterForm="ngForm" class="text-center" style="color: #757575;" action="#!">
+          <form class="text-center" style="color: #757575;" action="#!">
             <div class="row">
               <div class="col-lg-6">
                 <mat-form-field appearance="outline" class="w-100">
